Set favicon to Vite logo (/vite.svg)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Professional Management System</title>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="description" content="A professional management system with JWT authentication and role-based access control" />
   </head>
   <body>
